fix: :art: handle overflow when checkbox in checked

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -62,7 +62,7 @@ ul[data-type='taskList'] li > label {
 }
 ul[data-type='taskList'] li > label > input {
   margin-top: 0.5rem;
-  @apply appearance-none w-4 h-4 checked:after:content-['❤️'] bg-slate-200 rounded-sm checked:bg-slate-400 checked:text-slate-200 focus:ring-slate-400 focus:ring-2;
+  @apply overflow-hidden appearance-none w-4 h-4 checked:after:content-["🤍"] bg-slate-200 rounded-sm checked:bg-slate-400 checked:text-slate-200 focus:ring-slate-400 focus:ring-2;
 }
 ul[data-type='taskList'] li > div {
   flex: 1 1 auto;
